--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,7 @@
 .radius-10 {border-radius: 10px;}
 .radius-12 {border-radius: 12px;}
 .radius-16 {border-radius: 16px;}
+.radius-24 {border-radius: 24px;}
 
 html,
 body {
@@ -103,6 +104,12 @@ a {
   padding: 12px 24px !important;
 }
 
+/* .btn-cta:hover{
+  background: #ffb929;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 12px rgba(255, 185, 41, 0.3);
+} */
+
 .btn-navbar {
   width: fit-content;
   transition: all 0.3s ease;
@@ -135,7 +142,7 @@ a {
 
 .whatsapp-fab {
   /* position: fixed; */
-  bottom: 100px;
+  bottom: 70px;
   right: 30px;
   z-index: 99;
 }
